...
  Widget build(BuildContext context) {
    return PulsePage(
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
          Text(
            'Meeting Report',
            textAlign: TextAlign.center,
            style: Theme.of(context).textTheme.headlineMedium?.copyWith(
                  color: context.pulseOnSurface,
                  fontWeight: FontWeight.w700,
                ),
          ),
...
